overflow fix

--- a/malhar-website/css/style.css
+++ b/malhar-website/css/style.css
@@ -404,6 +404,8 @@ nav {
 }
 
 .collapse{
+  overflow-x: hidden;
+
   height: 0vh;
   width: 100vw;
   background-color: #111111;
